# ProducaoOperacional

./: .gitignore  CHANGELOG.md  GERAR_SETUP.bat  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py
.github/workflows/: tests.yml
config/: settings.example.json
scripts/: Producao_Operacional.iss  build_inno_setup.ps1  install_op_discovery_task.ps1  remove_op_discovery_task.ps1  run_deadline_alerts.py
src/kanban_app/: bootstrap.py  formatting.py  main.py
src/kanban_app/application/: application_errors.py  deadline_alert_service.py  document_import_service.py  dto.py  error_reporting.py  op_discovery_service.py  production_service.py
src/kanban_app/domain/: enums.py  option_lists.py
src/kanban_app/infrastructure/: config.py  demo.py  logging_setup.py
src/kanban_app/infrastructure/db/: models.py  repositories.py  session.py
src/kanban_app/infrastructure/services/: station_runtime.py
src/kanban_app/presentation/: main_window.py  theme.py  tv_focus_formatting.py  tv_settings.py
src/kanban_app/presentation/widgets/: __init__.py  _op_list_model_view.py  background_task.py  history_dialog.py  import_batch_dialog.py  op_form_dialog.py  op_list_view_widget.py  personalization_dialog.py  tv_focus_window.py
tests/: test_producao_v2.py
